@@ -3,7 +3,7 @@
 *                                                                      *
 * This file is part of the Final Cut widget toolkit                    *
 *                                                                      *
-* Copyright 2015-2017 Markus Gans                                      *
+* Copyright 2015-2018 Markus Gans                                      *
 *                                                                      *
 * The Final Cut is free software; you can redistribute it and/or       *
 * modify it under the terms of the GNU Lesser General Public License   *
@@ -330,7 +330,7 @@ bool FMenuBar::selectNextItem()
       if ( next == *iter )
         return false;
 
-      updateTerminal(false);
+      updateTerminal (FVTerm::stop_refresh);
       unselectItem();
       next->setSelected();
       setSelectedItem(next);
@@ -354,7 +354,7 @@ bool FMenuBar::selectNextItem()
         getStatusBar()->drawMessage();
 
       redraw();
-      updateTerminal(true);
+      updateTerminal (FVTerm::start_refresh);
       break;
     }
 
@@ -397,7 +397,7 @@ bool FMenuBar::selectPrevItem()
       if ( prev == *iter )
         return false;
 
-      updateTerminal(false);
+      updateTerminal (FVTerm::stop_refresh);
       unselectItem();
       prev->setSelected();
       prev->setFocus();
@@ -421,7 +421,7 @@ bool FMenuBar::selectPrevItem()
 
       setSelectedItem(prev);
       redraw();
-      updateTerminal(true);
+      updateTerminal (FVTerm::stop_refresh);
       break;
     }
   }
