@@ -1,3 +1,6 @@
+2017-02-02  Markus Gans  <guru.mail@muenster.de>
+	* Avoids flickering when redrawing a focused widget
+
 2017-01-31  Markus Gans  <guru.mail@muenster.de>
 	* Refactoring FSwitch::drawCheckButton
 	* Refactoring FWidget::redraw
